controlling component sass (navbar and tabs)

--- a/client/public/assets/styles/scss/components/_header.scss
+++ b/client/public/assets/styles/scss/components/_header.scss
@@ -47,10 +47,10 @@ header{
 .account-menu-wrapper a{
     font-weight: 600;
     text-decoration: none;
-    color: $secondary90;
+    color: #555353;
     font-size: 20px;
 }
 
 .dropdown-toggle:hover{
-    text-decoration: solid $secondary90 underline;
+    text-decoration: solid #555353 underline;
 }
