--- a/client/public/assets/styles/scss/components/_sidebar.scss
+++ b/client/public/assets/styles/scss/components/_sidebar.scss
@@ -33,7 +33,7 @@
             display: flex;
             text-decoration: none;
             align-items: center;
-            color: $secondary90;
+            color: #555353;
             transition: 0.25s;
         }
     }
