--- a/client/public/assets/styles/scss/style.scss
+++ b/client/public/assets/styles/scss/style.scss
@@ -1,17 +1,21 @@
+// Import color style
+@import "../scss/components/color-style";
+
+// Import bootstrap, google fonts, & icomoon
+@import "../../icomoon_font_icon/style.css";
 @import "../../../../../node_modules/bootstrap/scss/bootstrap.scss";
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+// Import variable & map amends bootstrap 5
+@import "../scss/abstract/variables";
 
 // Import Components
 @import "../scss/components/header";
 @import "../scss/components/sidebar";
 @import "../scss/components/icon";
+@import "../scss/components/navtab";
 
-// Import variable custom bootstrap 5
-@import "../scss/abstract/variables";
 
-// Import 
-
-/* ==== COLOR STYLES ==== */
 /* ==== TEXT STYLES: TEXT WEIGHT ==== */
 $light: 300;
 $regular: 400;
@@ -22,50 +26,6 @@ $bold: 700;
 $heading-4: 24px;
 $heading-5: 20px;
 $heading-6: 16px;
-/* ==== COLOR STYLES ==== */
-/* ==== Primary ==== */
-$primary10: #F99E6A;
-$primary30: #F77D39;
-$primary50: #F55D07;
-$primary70: #C44A06;
-$primary90: #933804;
-/* ==== Secondary ==== */
-$secondary10: #BBB9B9;
-$secondary30: #A4A2A2;
-$secondary50: #8D8B8B;
-$secondary70: #716F6F;
-$secondary90: #555353;
-/* ==== Info ==== */
-$info10: #7AB6ED;
-$info30: #4E9DE7;
-$info50: #2285E1;
-$info70: #1B6AB4;
-$info90: #145087;
-/* ==== Neutral ==== */
-$neutral10: #FAFAFA;
-$neutral30: #F7F7F7;
-$neutral50: #F4F4F4;
-$neutral70: #F2F2F2;
-$neutral90: #EFEFEF;
-/* ==== Success ==== */
-$success10: #99EA9C;
-$success30: #4DDA52;
-$success50: #00CA08;
-$success70: #008D06;
-$success90: #005103;
-/* ==== Warning ==== */
-$warning10: #FFFA80;
-$warning30: #FFF84D;
-$warning50: #FFF500;
-$warning70: #B3AC00;
-$warning90: #666200;
-/* ==== Error ==== */
-$error10: #D16666;
-$error30: #C23333;
-$error50: #B30000;
-$error70: #8F0000;
-$error90: #6B0000;
-
 
 * {
     ::after { 
