--- a/client/public/assets/styles/scss/components/_navtab.scss
+++ b/client/public/assets/styles/scss/components/_navtab.scss
@@ -5,20 +5,37 @@
 #pm-brg {
     @include semibold();
     color: #008D06;
+
+    :hover {
+        text-decoration: dashed #008D06;
+    }
 }
 
 #pg-brg {
     @include semibold();
     color: #F55D07;
+
+    :hover {
+        text-decoration: underline #F55D07;
+    }
 }
+
 
 #pnk-brg {
     @include semibold();
     color: #B30000;
+
+    :hover {
+        text-decoration: underline #F55D07;
+    }
 }
 
 #hst-brg {
     @include semibold();
     color: #1B6AB4;
+
+    :hover {
+        text-decoration: underline #1B6AB4;
+    }
 }
 
