--- a/client/public/assets/styles/scss/components/_sidebar.scss
+++ b/client/public/assets/styles/scss/components/_sidebar.scss
@@ -2,7 +2,7 @@
 .sidebar{
     grid-area: Sidebar;
     background-color: white;
-    height: 640px;
+    height: 105vmin;
     border-right: 1px solid black;
     
     .logo-picture{
