--- a/client/public/assets/styles/scss/components/_table.scss
+++ b/client/public/assets/styles/scss/components/_table.scss
@@ -1,8 +1,9 @@
-.table-container-height{
+/* ======= TABLE PEMASUKAN ========== */
+.table-container-height-pmk{
     height: 250px;
 };
 
-.table-custom{
+.table-custom-pmk{
     .th-tgl-pemasukan, .th-merek-brg, .th-no-dokumen-bc, .th-harga-per-unit, .th-vendor-item, .th-barcode-brg{
         min-width: 150px;
     }
@@ -20,5 +21,18 @@
     }
     .th-aksi-data{
         width: 150px;
+    }
+};
+
+/* ========= TABLE PENGELUARAN ========== */
+.table-container-size-pgl{
+    height: 520px;
+    width: 770px;
+};
+.table-custom-pgl{
+    width: 1200px;
+
+    .th-deskripsi-brg{
+        width: 300px;
     }
 };
