Update 12: add _lampiran-item.scss

--- a/client/public/assets/styles/scss/style.scss
+++ b/client/public/assets/styles/scss/style.scss
@@ -11,6 +11,8 @@
 @use "../scss/components/icon";
 @use "../scss/components/navtab";
 @use "../scss/components/table";
+@use "../scss/components/misc";
+@use "../scss/components/lampiran-item";
 
 * {
     ::after { 
