--- a/client/public/assets/styles/scss/style.scss
+++ b/client/public/assets/styles/scss/style.scss
@@ -23,7 +23,7 @@
 }
 
 body{
-    font-family:'Raleway', sans-serif;;    
+    font-family:'Raleway', sans-serif;
     margin: 0;
     padding: 0;
     display: grid;
