Update 27: Adding Register Page finished

--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -16,7 +16,7 @@
 
     <div class="container-xl w-25 p-3 mx-auto my-5 border bg-light">
         <img src="assets/img/logo_duty_free.png" alt="Logo Jakarta Duty Free" class="d-block w-50 mx-auto">
-        <form action="" method="post">
+        <form action="/login" method="post">
             
             <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" name="username" id="username">
