--- a/client/public/assets/styles/scss/login.scss
+++ b/client/public/assets/styles/scss/login.scss
@@ -17,3 +17,18 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.secret-btn{
+    cursor: pointer;
+    font-size: 11px;
+    color: black;
+    text-decoration: none;
+    position: relative;
+    left: 12px;
+}
+
+.secret-btn:hover{
+    color: black !important;
+}
+
+
