--- a/client/views/register.ejs
+++ b/client/views/register.ejs
@@ -12,14 +12,47 @@
     <script src="assets/js/bootstrap_v5.0.2/bootstrap.bundle.min.js"></script> 
 </head>
 <body>
-    <h1 class="display-5 my-2">Register</h1>
-    <div class="container mt-5 p-2">
-        <form action="" method="post">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" id="email" name="email">
-            <label for="username" class="form-label">Username</label>
-            <label for="password" class="form-label">Password</label>
-            <label for="fullname" class="form-label">Fullname</label>
+    <h1 class="display-5 my-2 text-center ">Register</h1>
+    <div class="w-25 my-5 p-2 border mx-auto">
+        <form action="/register" method="post">
+            <div>
+                <% if(errors != " ") {%>
+                    <% errors.forEach(function(item) { %>
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                           <%- item %>
+                           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                 <% }); %> 
+                <% } %> 
+            </div>
+            <div class="form-group">
+                <label for="email" class="form-label">Email</label><br>
+                <input type="text" id="email" name="email" class="form-control" required><br>
+            </div>
+                
+            <div class="form-group">
+                <label for="username" class="form-label">Username</label><br>
+                <input type="text" id="username" name="username" class="form-control" required><br>
+            </div>
+                
+            <div class="form-group">
+                <label for="password" class="form-label">Password</label><br>
+                <input type="password" id="password" name="password" class="form-control" required><br>
+            </div>
+
+            <div class="form-group">
+                <label for="confirm-password" class="form-label">Confirm Password</label><br>
+                <input type="password" id="confirm-password" name="confirm-password" class="form-control" required><br>
+            </div>
+                
+            <div class="form-group">
+                <label for="fullname" class="form-label">Fullname</label><br>
+                <input type="text" id="fullname" name="fullname" class="form-control" required><br>
+            </div>
+                
+            <button type="submit" class="btn btn-primary mt-2">
+                <span style="font-weight: bold; color: white;">Register</span>
+            </button>
         </form>
     </div>
 </body>
