--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -12,7 +12,9 @@
     <script src="assets/js/bootstrap_v5.0.2/bootstrap.bundle.min.js"></script> 
 </head>
 <body class="background-hero">
-    <header class="container-fluid-xl login-height bg-primary border mb-5"></header>
+    <header class="container-fluid-xl login-height bg-primary border mb-5">
+        <a href="/register" class="secret-btn">Add Account</a>
+    </header>
 
     <div class="container-xl w-25 p-3 mx-auto my-5 border bg-light">
         <img src="assets/img/logo_duty_free.png" alt="Logo Jakarta Duty Free" class="d-block w-50 mx-auto">
@@ -38,7 +40,6 @@
 
             <button type="submit" class="btn btn-primary d-block mx-auto my-2"><span style="color: white; font-weight: bold;">Login</span></button>
         </form>
-        <a href="/register" class="secret-btn">Add Account</a>
     </div>
         
     <footer class="w-100 login-height bg-primary border mt-5"><div style="text-align: center; margin-top: 10px; color: white; font-weight: bold;">©2022 PT. Aura Cantik. Created by M. Farhan</div></footer>
