--- a/client/views/pemasukan.ejs
+++ b/client/views/pemasukan.ejs
@@ -49,7 +49,7 @@
                                         <!--- FLT. TGL --->
                                         <div class="mb-2">
                                             <label for="tgl_pemasukan">Tgl. Pemasukan</label>
-                                            <input type="date" class="form-control" id="tgl_pemasukan" placeholder="dd-mmm-yyyy" value=""
+                                            <input type="date" class="form-control" id="tgl_pemasukan" placeholder="mm-dd-yyyy" value=""
                                             min="1999-01-01" max="2050-12-31">
                                         </div>
                                         <!--- FLT. DOKUM --->
