--- a/client/views/pemasukan.ejs
+++ b/client/views/pemasukan.ejs
@@ -21,7 +21,7 @@
                     <a class="nav-link" aria-current="page" href="/pengeluaran" id="pg-brg">Pengeluaran Barang</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#" id="pnk-brg">Penarikan Barang</a>
+                  <a class="nav-link" aria-current="page" href="/penarikan" id="pnk-brg">Penarikan Barang</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#" id="hst-brg">Histori Barang</a>
@@ -106,7 +106,7 @@
             <!---- TABLE CONTAINER ---->
             <div class="container-lg mt-3 overflow-scroll table-container-height-pmk">
                 <!---<iframe src="./public/src/html/table_pemasukan.html" width="1050" height="300"></iframe>--->
-                <table class="table table-bordered border table-custom-pmk table-hover">
+                <table class="table table-bordered border table-custom-pmk table-hover" id="tb_pemasukan">
                     <thead class="table-secondary">
                         <tr class="d-flex">
                             <th scope="col"><input type="checkbox" name="select-all-items" id="select-all-items"></th>
