--- a/client/views/pemasukan.ejs
+++ b/client/views/pemasukan.ejs
@@ -15,16 +15,16 @@
             <!---- NAVIGATION TABS ---->
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/" id="pm-brg">Pemasukan Barang</a>
+                    <a class="nav-link active" aria-current="page" href="/" id="pm-brg">Pemasukan Barang</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/pengeluaran" id="pg-brg">Pengeluaran Barang</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/penarikan" id="pnk-brg">Penarikan Barang</a>
+                    <a class="nav-link" aria-current="page" href="/penarikan" id="pnk-brg">Penarikan Barang</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#" id="hst-brg">Histori Barang</a>
+                    <a class="nav-link" aria-current="page" href="#" id="hst-brg">Histori Barang</a>
                 </li>
             </ul>
 
@@ -233,12 +233,14 @@
 
             <!---- BUTTON GROUP FOR TABLE ---->
             <div class="container-lg d-flex my-2 justify-content-center">
-                <button type="button" class="btn btn-success" style="font-weight: 700;">Tambah Barang</button>
+                <button type="button" class="btn btn-success" style="font-weight: 700;" data-bs-toggle="modal" data-bs-target="#add-item-modal">Tambah Barang</button>
                 <button type="button" class="btn btn-danger ms-2" style="font-weight: 700;">Hapus Barang</button>
                 <button type="button" class="btn btn-primary ms-2" style="font-weight: 700;">Kirim Barang</button>
             </div>
 
         </div>
+
+        <%- include('partials/add_item_modal'); %> 
     </section>
 
     <!--- Footer --->
