--- a/client/public/assets/styles/scss/login.scss
+++ b/client/public/assets/styles/scss/login.scss
@@ -20,12 +20,12 @@ body {
 
 .secret-btn{
     cursor: pointer;
-    font-size: 12px;
+    font-size: 14px;
     color: #fd7e14;
     text-decoration: none;
     position: relative;
     left: 12px;
-    text-align: center;
+    margin: 0 auto;
 }
 
 .secret-btn:hover{
