--- a/client/public/assets/styles/scss/style.scss
+++ b/client/public/assets/styles/scss/style.scss
@@ -13,6 +13,7 @@
 @use "../scss/components/table";
 @use "../scss/components/misc";
 @use "../scss/components/lampiran-item";
+@use "../scss/components/histori";
 
 * {
     ::after { 
