--- a/client/views/pemasukan.ejs
+++ b/client/views/pemasukan.ejs
@@ -24,7 +24,7 @@
                     <a class="nav-link" aria-current="page" href="/penarikan" id="pnk-brg">Penarikan Barang</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#" id="hst-brg">Histori Barang</a>
+                    <a class="nav-link" aria-current="page" href="/histori" id="hst-brg">Histori Barang</a>
                 </li>
             </ul>
 
@@ -33,9 +33,12 @@
                 <div class="container-lg ">
                             
                     <div class="d-flex align-items-center">
-                        <p style="margin: 0;">Search: </p>
-                        <input type="text" placeholder="Cari Deskripsi Barang" id="searchBar" class="ms-2">
-
+                        <form action="" method="post" class="d-flex align-items-center">
+                            <p style="margin: 0;">Search: </p>
+                            <input type="text" placeholder="Cari Deskripsi Barang" id="searchBar" class="ms-2">
+                            <button type="submit" class="btn btn-dark mx-2">Search</button>
+                        </form>
+                        
                         <!----- DROPDOWN FILTER BARANG----->
                         <div class="dropdown">
                             <button class="btn btn-light border border-dark mx-2 dropdown-toggle" type="button" id="filterButton" aria-expanded="false" data-bs-toggle="dropdown"> More Filter </button>
