Update 40: View Barang Promise success

--- a/client/views/penarikan.ejs
+++ b/client/views/penarikan.ejs
@@ -28,7 +28,7 @@
                 </li>
             </ul>
 
-            <form action="" method="post">
+            <form action="" method="post"><!---- Add lampiran item ---->
                 <!---- CONTAINER CONTENT FROM TAB ---->
                 <div class="container-md bg-light p-3">
 
@@ -177,6 +177,7 @@
                         <h2>Daftar Lampiran</h2>
 
                         <!---- LIST LAMPIRAN & INPUT LAPORAN CONTAINER ---->
+                        <!---- DELETE LAMPIRAN ITEM ==--> 
                         <div class="container-lg">
                             <div class="row">
                                 <!---- DAFTAR LAMPIRAN ---->
