--- a/client/views/pengeluaran.ejs
+++ b/client/views/pengeluaran.ejs
@@ -376,7 +376,7 @@
                     </div>
 
                     <hr>
-                    <button type="button" class="btn btn-warning my-3"><strong>Check-up & Print PPB-TBB</strong></button>
+                    <a type="button" class="btn btn-warning my-3" href="#"><strong>Check-up & Print PPB-TBB</strong></a>
                 </div>
             </div>
         </div>
