--- a/client/views/pemasukan.ejs
+++ b/client/views/pemasukan.ejs
@@ -33,7 +33,7 @@
                 <div class="container-lg ">
                             
                     <div class="d-flex align-items-center">
-                        <form action="" method="post" class="d-flex align-items-center">
+                        <form action="" method="get" class="d-flex align-items-center">
                             <p style="margin: 0;">Search: </p>
                             <input type="text" placeholder="Cari Deskripsi Barang" id="searchBar" class="ms-2">
                             <button type="submit" class="btn btn-dark mx-2">Search</button>
@@ -45,7 +45,7 @@
 
                             <div class="dropdown-menu" width="800">
 
-                            <form class="px-2 py-1">
+                            <form class="px-2 py-1" method="get" action="">
                                 <div class="row">
 
                                     <div class="col-md border">
